--- a/app/src/main/res/layout/activity_main_get_list.xml
+++ b/app/src/main/res/layout/activity_main_get_list.xml
@@ -4,20 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainGetList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rvData"
-        tools:listitem="@layout/list_data"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Get List User"
-        android:id="@+id/btGetList"/>
-
+        android:layout_height="match_parent"
+        android:id="@+id/rvGetList"
+        tools:listitem="@layout/activity_main_get_list"/>
 
 </LinearLayout>
